--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <!-- Banner section-->
 
-        <table width="100%" height="500px" border="0" align="center" background="Assets/images/c6.png">
+        <table width="100%" height="500px" border="0" align="center" background="https://raw.githubusercontent.com/melvinkhasper/khasper1/main/images/P1.jpeg">
             <tr>
                 <td align="center">
                     <font size="+4" color="white"> WELCOME TO KHASPER TRADING PLATFORM </font>
