--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </tr>
             <tr>
                 <td width="10%"></td>
-                <td width="3"> <img src="Assets/images/image1.jpeg" width="600px"></td>
+                <td width="3"> <img src="https://raw.githubusercontent.com/melvinkhasper/khasper1/main/images/P1.jpeg" width="600px"></td>
                 <td width="3%"></td>
                 <td valign="" align="">
                     <font size="+2">
