--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>khasper trading platform</title>
         <meta name="viewport " content="width=device-width, intital-scale=1.0">
-        <link rel="icon" href="assets/images/image1.jpeg">
+        <link rel="icon" href="images/image1.jpeg">
         <script src="https://kit.fontawesome.com/362b0d56ba.js" crossorigin="anonymous"></script>
     </head>
 
@@ -16,7 +16,7 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td align="center"> <img src="Assets/images/image1.png" width="100px"></td>
+                <td align="center"> <img src="images/image1.png" width="100px"></td>
 
                 <td align="center"><a href="">
                         <font size="+1" color="#000000">Home</font>
@@ -264,7 +264,7 @@
                     </font>
                 <td width="3%"></td>
 
-                <td align="right"> <img src="Assets/images/image3.jpeg" width="600px"></td>
+                <td align="right"> <img src="images/image3.jpeg" width="600px"></td>
 
                 <td width="10%"></td>
 
@@ -293,7 +293,7 @@
 
         <table width="20%" align="center" bgcolor="#E1E1E1">
             <tr>
-                <td><img src="Assets/images/image1.png" width="100%"></td>
+                <td><img src="images/image1.png" width="100%"></td>
             </tr>
         </table>
         <br><br><br>
@@ -303,7 +303,7 @@
         <table width="100%" align="center" bgcolor="#8F8F8F" border="0" height="200px">
 
             <tr>
-                <td align=center> <img src="Assets/images/image4.jpeg" width="50%"></td>
+                <td align=center> <img src="images/image4.jpeg" width="50%"></td>
                 <td align="" valign="left" width="15%">
                     <font size="+2" color="#FFFFFF"><b>SERVICES</b></font><br> <br>
                     <a href="">
