--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td align="center"> <img src="images/image1.png" width="100px"></td>
+                <td align="center"> <img src="images/c6.png" width="100px"></td>
 
                 <td align="center"><a href="">
                         <font size="+1" color="#000000">Home</font>
