--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>khasper trading platform</title>
         <meta name="viewport " content="width=device-width, intital-scale=1.0">
-        <link rel="icon" href="images/image1.jpeg">
+        <link rel="icon" href="images/image1.png">
         <script src="https://kit.fontawesome.com/362b0d56ba.js" crossorigin="anonymous"></script>
     </head>
 
@@ -16,7 +16,7 @@
             <tr>
                 <td></td>
                 <td></td>
-                <td align="center"> <img src="images/c6.png" width="100px"></td>
+                <td align="center"> <img src="images/image1.png" width="100px"></td>
 
                 <td align="center"><a href="">
                         <font size="+1" color="#000000">Home</font>
@@ -69,7 +69,7 @@
 
         <!-- Banner section-->
 
-        <table width="100%" height="500px" border="0" align="center" background="https://raw.githubusercontent.com/melvinkhasper/khasper1/main/images/P1.jpeg">
+        <table width="100%" height="500px" border="0" align="center" background="https://raw.githubusercontent.com/melvinkhasper/khasper1/main/images/c6.png">
             <tr>
                 <td align="center">
                     <font size="+4" color="white"> WELCOME TO KHASPER TRADING PLATFORM </font>
