--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <tr>
                             <td align="center">
                         <video width="50%" height="500px" controls="">
-                            <source src="assets/videos/video1.mp4" type="video/mp4">
+                            <source src="videos/video1.mp4" type="video/mp4">
                         </video>
                             </td></tr>
                     </table>
