--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <tr>
                             <td align="center">
                         <video width="50%" height="500px" controls="">
-                            <source src="videos/video1.mp4" type="video/mp4">
+                            <source src="https://github.com/melvinkhasper/khasper1/raw/main/video1.mp4" type="video/mp4">
                         
                                 </video>
                                 
